--- a/svg/sharing/sharing.scss
+++ b/svg/sharing/sharing.scss
@@ -1,23 +1,27 @@
-.sharing { width: 12em; height: 12em; position: relative; }
-.band { width: 3em; height: 12em; position: absolute; }
+$r: 0.4em;
+$positions: 1.5 4 6 8 10.5;
+$size: 12em;
+
+.sharing { width: $size; height: $size; position: relative; }
+.band { width: $size / 4; height: $size; position: absolute; }
 .band.to { right: 0; }
 .band svg { width: 100%; height: 100%; }
 
 .band.from::before {
   content: '';
   display: block;
-  width: 1em;
-  height: 1em;
+  width: $r * 2;
+  height: $r * 2;
+  transform: translate(-$r, -$r);
   background: black;
   position: absolute;
-  left: 1em;
-  top: 5.5em;
+  left:  #{nth($positions, 1)}em;
+  top: $size / 2;
   border-radius: 50%;
   animation: band-sharing 3s infinite;
 }
 
 @keyframes band-sharing {
-  $positions: 1 3.5 5.5 7.5 10;
   $start: 8;
   $step: 10;
   $fade: grey;
@@ -43,5 +47,5 @@
     }
   }
 
-  90% { left: 10em;  box-shadow: 0 0 transparent; }
+  90% { left: #{nth($positions, length($positions))}em; box-shadow: 0 0 transparent; }
 }
