--- a/svg/sharing/sharing.css
+++ b/svg/sharing/sharing.css
@@ -15,6 +15,24 @@
   width: 100%;
   height: 100%; }
 
+.ok {
+  position: absolute;
+  top: 0;
+  right: 1.1em;
+  width: 0.8em;
+  height: 100%;
+  opacity: 0; }
+
+.ok svg {
+  width: 100%;
+  height: 100%; }
+
+.sharing:hover .ok {
+  transition: all 0.3s 0.6s;
+  opacity: 1;
+  right: 0.7em;
+  width: 1.6em; }
+
 .sharing:hover .dot {
   opacity: 0;
   width: 0.8em;
