--- a/svg/sharing/sharing.scss
+++ b/svg/sharing/sharing.scss
@@ -1,11 +1,28 @@
 $r: 0.4em;
 $positions: 1.5em 4em 6em 8em 10.5em;
 $size: 12em;
+$ok: 1.6em;
 
 .sharing { width: $size; height: $size; position: relative; }
 .band { width: $size / 4; height: $size; position: absolute; }
 .band.to { right: 0; }
 .band svg { width: 100%; height: 100%; }
+.ok {
+  position: absolute;
+  top: 0;
+  right: nth($positions, 1) - $ok / 4;
+  width: $ok / 2;
+  height: 100%;
+  opacity: 0;
+}
+.ok svg { width: 100%; height: 100%; }
+
+.sharing:hover .ok {
+  transition: all 0.3s 0.6s;
+  opacity: 1;
+  right: nth($positions, 1) - $ok / 2;
+  width: $ok;
+}
 
 .sharing:hover .dot {
   opacity: 0;
