--- a/svg/sharing/sharing.css
+++ b/svg/sharing/sharing.css
@@ -63,10 +63,10 @@
 @keyframes band-sharing {
   from {
     opacity: 0;
-    transform: scale(0.5), translate(-0.2em, -0.2em); }
+    transform: translate(-0.4em, -0.4em) scale(0.5); }
   8%, 10% {
     opacity: 1;
-    transform: scale(1), translate(-0.4em, -0.4em); }
+    transform: translate(-0.4em, -0.4em) scale(1); }
   50%, to {
     opacity: 0;
-    transform: scale(0.7), translate(-0.28em, -0.28em); } }
+    transform: translate(-0.4em, -0.4em) scale(0.7); } }
