--- a/svg/sharing/sharing.scss
+++ b/svg/sharing/sharing.scss
@@ -44,7 +44,7 @@ $ok: 1.6em;
 }
 
 @keyframes band-sharing {
-  from    { opacity: 0; transform: scale(0.5), translate(-$r / 2, -$r / 2); }
-  8%, 10% { opacity: 1; transform: scale(1),   translate(-$r, -$r); }
-  50%, to { opacity: 0; transform: scale(0.7), translate(-$r * 0.7, -$r * 0.7); }
+  from    { opacity: 0; transform: translate(-$r, -$r) scale(0.5); }
+  8%, 10% { opacity: 1; transform: translate(-$r, -$r) scale(1); }
+  50%, to { opacity: 0; transform: translate(-$r, -$r) scale(0.7); }
 }
