--- a/svg/pay/pay.scss
+++ b/svg/pay/pay.scss
@@ -35,6 +35,12 @@ $color: #333;
     color: $color;
     transform: scale(1, 1);
   }
+
+  @for $i from 1 to 4 {
+    .signal#{$i} {
+      animation: signal 0.8s #{0.4 + $i * 0.2}s infinite;
+    }
+  }
 }
 
 @mixin card {
@@ -65,6 +71,25 @@ $color: #333;
     box-shadow: 0 0 transparent;
     transform: scale(1, -1);
   }
+}
+
+.signal {
+  position: absolute;
+  left: -4em;
+  width: 11em;
+  opacity: 0;
+}
+.signal svg {
+  width: 100%;
+  fill: none;
+  stroke-width: 6px;
+  stroke: $color;
+  stroke-linecap: round;
+}
+
+@keyframes signal {
+  from, 70%, to { opacity: 0; }
+  30% { opacity: 1; }
 }
 
 .band, .card:hover { @include band; }
