--- a/svg/sharing/sharing.css
+++ b/svg/sharing/sharing.css
@@ -2,47 +2,38 @@
   width: 12em;
   height: 12em;
   position: relative; }
-
-.band {
-  width: 3em;
-  height: 12em;
-  position: absolute; }
-
-.band.to {
-  right: 0; }
-
-.band svg {
-  width: 100%;
-  height: 100%; }
-
-.ok {
-  position: absolute;
-  top: 0;
-  right: 1.1em;
-  width: 0.8em;
-  height: 100%;
-  opacity: 0; }
-
-.ok svg {
-  width: 100%;
-  height: 100%; }
-
-.sharing:hover .ok {
-  transition: all 0.3s 0.6s;
-  opacity: 1;
-  right: 0.7em;
-  width: 1.6em; }
-
-.sharing:hover .dot {
-  opacity: 0;
-  width: 0.8em;
-  height: 0.8em;
-  transform: translate(-0.4em, -0.4em);
-  background: black;
-  position: absolute;
-  left: 1.5em;
-  top: 6em;
-  border-radius: 50%; }
+  .sharing .band {
+    width: 3em;
+    height: 12em;
+    position: absolute;
+    background: none no-repeat center;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20viewBox%3D%220%200%20202%20486%22%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M154%2C31V0H48v32C21%2C34%2C0%2C57%2C0%2C84v319c0%2C27%2C21%2C50%2C48%2C52v32h105v%2D32c27%2D03%2C48%2D25%2C48%2D52V84%20%20%20%20%20%20%20%20%20C202%2C56%2C181%2C34%2C154%2C31z%20M180%2C94v308c0%2C17%2D14%2C31%2D31%2C31H53c%2D17%2C0%2D31%2D14%2D31%2D31V94v%2D10c0%2D17%2C14%2D31%2C31%2D31h96%20%20%20%20%20%20%20%20%20c17%2C0%2C31%2C14%2C31%2C31V94z%22%2F%3E%3C%2Fsvg%3E"); }
+  .sharing .band.to {
+    right: 0; }
+  .sharing .ok {
+    position: absolute;
+    top: 0;
+    right: 0.7em;
+    width: 1.6em;
+    height: 100%;
+    transform: scale(0.5);
+    opacity: 0;
+    background: none no-repeat center;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20viewBox%3D%220%200%20900%20760%22%20xmlns%3D%22http%3A%2F%2Fwww%2Ew3%2Eorg%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M900%2C104C900%2C46%2C854%2C0%2C796%2C0c%2D32%2C0%2D61%2C15%2D81%2C38l0%2C0l%2D374%2C460L180%2C324l0%2C0c%2D19%2D21%2D46%2D33%2D76%2D33%20%20%20%20%20%20%20%20%20C46%2C290%2C0%2C337%2C0%2C394c0%2C27%2C11%2C52%2C28%2C70l0%2C0L270%2C727l0%2C0c19%2C21%2C46%2C33%2C76%2C33c33%2C0%2C61%2D15%2C81%2D38l0%2C0l450%2D553l0%2C0%20%20%20%20%20%20%20%20%20C891%2C151%2C900%2C129%2C900%2C104z%22%2F%3E%3C%2Fsvg%3E"); }
+  .sharing:hover .ok {
+    transition: all 0.3s 0.6s;
+    opacity: 1;
+    transform: scale(1); }
+  .sharing:hover .dot {
+    opacity: 0;
+    width: 0.8em;
+    height: 0.8em;
+    transform: translate(-0.4em, -0.4em);
+    background: black;
+    position: absolute;
+    left: 1.5em;
+    top: 6em;
+    border-radius: 50%; }
 
 .sharing:hover .dot1 {
   left: 1.5em;
