--- a/svg/auth/auth.scss
+++ b/svg/auth/auth.scss
@@ -1,19 +1,52 @@
+@import '../../node_modules/sassdash/index';
+@import '../../node_modules/sass-svg/index';
+
 $color: #333;
-$stroke: 0.45em;
-$radius: 0.7em;
 
 .auth {
   width: 10em;
   height: 10em;
   position: relative;
 
-  svg { width: 100%; fill: $color; }
-
   .fingerprint {
     position: absolute;
     top: 1em;
     left: 2em;
     width: 6em;
+    height: 8em;
+    
+    background: none no-repeat center;
+
+    @include svg('svg', ( viewBox: 0 0 180 240 )) {
+      @include svg('path', ( d: 'M136,216c-1,0-2,0-3-1c-30-24-63-52-72-83c-4-13,4-27,17-31c13-4,27,4,31,17
+        c5,18,41,47,55,58c2,2,3,5,1,7c-2,2-5,3-7,1c-26-20-53-44-58-63c-2-8-11-13-19-10
+        c-8,2-13,11-10,19c8,28,40,55,69,78c2,2,3,5,1,7C139,216,138,216,136,216z'));
+      @include svg('path', ( d: 'M9,191c-2,0-4-1-5-4c-1-3,1-5,3-6c6-2,23-10,15-38C18,126,20,109,28,94
+        C37,78,50,67,67,63c34-10,69,10,80,43c2,2,20,16,31,26c2,2,2,5,1,7c-2,2-5,2-7,1
+        c-32-26-33-28-34-29c0,0,0-1,0-1C129,81,99,64,70,72C56,76,44,86,37,98C30,111,28,126,32,140
+        c9,30-6,46-22,50C10,191,10,191,9,191z'));
+      @include svg('path', ( d: 'M25,210c-2,0-4-1-5-4c-1-3,1-5,3-6c21-6,28-17,18-63c-5-25,8-49,31-55
+        c24-7,49,7,56,31c1,5,8,14,45,44c2,2,3,5,1,7c-2,2-5,3-7,1c-41-32-46-42-48-49
+        c-5-19-25-29-43-24c-18,5-28,24-24,44c10,47,4,66-25,75C26,210,25,210,25,210z'));
+      @include svg('path', ( d: 'M150,200c-1,0-3,0-4-1c-2-2-6-5-10-8c-18-14-48-36-56-64c-1-3,1-5,3-6
+        c3-1,5,1,6,3c7,24,35,46,52,59c5,4,9,7,12,9c2,2,2,5,0,7C153,200,151,200,150,200z'));
+      @include svg('path', ( d: 'M75,240C75,240,75,240,75,240C72,240,70,237,70,235C70,229,73,200,90,200c12,0,20,10,25,17c1,2,2,3,4,5
+        c2,2,2,5,0,7s-5,2-7,0c-1-1-3-3-5-6C103,217,97,210,90,210c-5,0-9,15-10,25
+        C80,238,78,240,75,240z'));
+      @include svg('path', ( d: 'M45,230c-2,0-4-1-5-3c-1-3,1-5,3-6c13-4,21-30,17-44c-1-3,1-5,3-6
+        c3-1,5,1,6,3c5,17-4,50-23,56C46,230,46,230,45,230z'));
+      @include svg('path', ( d: 'M5,130C2,130,0,128,0,125C0,78,38,40,85,40c46,0,63,27,75,46c6,9,11,17,17,19c3,1,4,4,3,6
+        c-1,3-4,4-6,3c-10-3-16-13-22-23C140,73,126,50,85,50C44,50,10,84,10,125C10,128,8,130,5,130z'));
+      @include svg('path', ( d: 'M10,165c-2,0-4-1-4-3C5,160,0,151,0,145C0,142,2,140,5,140S10,142,10,145c0,3,3,9,4,13
+        c1,2,0,5-2,7C12,165,11,165,10,165z'));
+      @include svg('path', ( d: 'M155,60c-2,0-3-1-4-2C146,49,118,30,80,30C40,30,19,50,14,58C13,60,10,61,7,59S4,55,6,52
+        C11,43,35,20,80,20c42,0,72,21,79,32c1,2,1,5-2,7C157,60,156,60,155,60z'));
+      @include svg('path', ( d: 'M135,20c-1,0-1,0-2,0c-2-1-4-1-6-2C117,14,107,10,80,10C56,10,51,13,43,17C41,18,39,19,37,20
+        C35,21,32,20,30,17C29,15,30,12,33,10c2-1,4-2,6-3C47,3,54,0,80,0c29,0,40,4,51,8
+        C133,9,135,10,137,10c3,1,4,4,3,6C139,19,137,20,135,20z'));
+      @include svg('path', ( d: 'M175,90c-2,0-4-1-5-3c-2-7-9-19-10-19c-1-2-1-5,2-7c2-1,5-1,7,2
+        c0,1,8,13,10,21c1,3-1,5-3,6C176,90,175,90,175,90z'));
+    }
   }
 
   &:hover .fingerprint {
@@ -21,12 +54,23 @@ $radius: 0.7em;
     animation: fingerblink 2s;
   }
 
-  .ok {
+  .desktop, .laptop, .smartphone, .ok {
     position: absolute;
-    top: 3.5em;
+    background: none no-repeat center;
+    opacity: 0;
+  }
+
+  .ok {
+    top: 4em;
     left: 4em;
     width: 2em;
-    opacity: 0;
+    height: 1.5em;
+
+    @include svg('svg', ( viewBox: 0 0 900 760 )) {
+      @include svg('path', ( d: 'M900,104C900,46,854,0,796,0c-32,0-61,15-81,38l0,0l-374,460L180,324l0,0c-19-21-46-33-76-33
+        C46,290,0,337,0,394c0,27,11,52,28,70l0,0L270,727l0,0c19,21,46,33,76,33c33,0,61-15,81-38l0,0l450-553l0,0
+        C891,151,900,129,900,104z'));
+    }
   }
 
   &:hover .ok {
@@ -35,75 +79,50 @@ $radius: 0.7em;
   }
 
   .desktop {
-    $w: 8em;
-    $h: 5.5em;
-    $hw: 1.4em;
-    $hh: 1em;
-    $bw: 3.4em;
+    top: 1.8em;
+    left: 1em;
+    width: 8em;
+    height: 7em;
 
-    // @todo left
-
-    position: absolute;
-    top: 1em;
-    left: (10em - $w) / 2 - $stroke;
-    width: $w;
-    height: $h;
-    border: $stroke solid $color;
-    border-radius: 0.7em;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: $h;
-      left: ($w - $hw) / 2 - $stroke;
-      width: $hw;
-      height: $hh;
-      border: $stroke solid $color;
-    }
-
-    &::after {
-      content: '';
-      position: absolute;
-      top: $h + $hh + $stroke;
-      left: ($w - $bw) / 2;
-      width: $bw;
-      height: $stroke;
-      background: $color;
-      border-radius: $stroke;
+    @include svg('svg', ( viewBox: 0 0 88 74 )) {
+      @include svg('path', ( d: 'M6,0C2.7,0,0,2.7,0,6v50c0,3.3,2.7,6,6,6h29v8h-3c-1.1,0-2,0.9-2,2s0.9,2,2,2h24c1.1,0,2-0.9,2-2s-0.9-2-2-2h-3v-8h29
+        c3.3,0,6-2.7,6-6V6c0-3.3-2.7-6-6-6H6z M6,4h76c1.1,0,2,0.9,2,2v50c0,1.1-0.9,2-2,2H6c-1.1,0-2-0.9-2-2V6C4,4.9,4.9,4,6,4z M39,62
+        h10v8H39V62z'));
     }
   }
 
   .laptop {
-    $w: 7em;
-    $h: 5em;
-    $bw: 8em;
-    $bh: 0.3em;
+    top: 1.6em;
+    left: 1em;
+    width: 8em;
+    height: 7em;
+    
+    @include svg('svg', ( viewBox: 0 0 900 660 )) {
+      @include svg('path', ( d: 'M130,0C92,0,60,32,60,70v450H20c-11,0-20,10-20,20v40c0,44,36,80,80,80h740c44,0,80-36,80-80v-40c0-10-10-20-20-20h-40V70c0-38-32-70-70-70H130z
+        M130,40h640c17,0,30,13,30,30v450H100V70C100,53,113,40,130,40z M40,560h820v20c0,23-17,40-40,40H80c-23,0-40-17-40-40V560z'));
+    }
+  }
 
-    position: absolute;
+  .smartphone {
     top: 1em;
-    left: (10em - $w) / 2 - $stroke;
-    width: $w;
-    height: $h;
-    border: $stroke solid $color;
-    border-radius: $radius $radius 0 0;
+    left: 2em;
+    width: 6em;
+    height: 8em;
 
-    &::after {
-      content: '';
-      position: absolute;
-      top: $h;
-      left: ($w - $bw) / 2 - $stroke;
-      width: $bw;
-      height: $bh;
-      border: $stroke solid $color;
-      border-radius: 0 0 $radius $radius;
+    @include svg('svg', ( viewBox: 0 0 56 88 )) {
+      @include svg('path', ( d: 'M6,0c-3.3,0-6,2.7-6,6v76c0,3.3,2.7,6,6,6h44c3.3,0,6-2.7,6-6v-76c0-3.3-2.7-6-6-6L6,0z
+        M6,4h44c1.1,0,2,0.9,2,2v2H4v-2C4,4.8,4.9,4,6,4z
+        M4,12h48v60H4V12z
+        M4,76h48v6c0,1.1-0.9,2-2,2H6c-1.1,0-2-0.9-2-2V76z
+        M28,78c-1.1,0-2,0.9-2,2s0.9,2,2,2s2-0.9,2-2S29.1,78,28,78z'));
     }
   }
 
   $blink: 0.4s;
-  .desktop, .laptop { opacity: 0; }
   &:hover {
-    .desktop { animation: deviceblink $blink * 2 2.3s 2; }
-    .laptop  { animation: deviceblink $blink * 2 2.3s + $blink 2; }
+    .desktop    { animation: deviceblink $blink * 3 2.3s 2; }
+    .laptop     { animation: deviceblink $blink * 3 2.3s + $blink 2; }
+    .smartphone { animation: deviceblink $blink * 3 2.3s + 2 * $blink 2; }
   }
 }
 
@@ -113,6 +132,6 @@ $radius: 0.7em;
 }
 
 @keyframes deviceblink {
-  from, 50%, to { opacity: 0; }
-  5%, 45% { opacity: 1; }
+  from, 33%, to { opacity: 0; }
+  5%, 28% { opacity: 1; }
 }
