--- a/svg/fitness/fitness.scss
+++ b/svg/fitness/fitness.scss
@@ -8,13 +8,14 @@ $color: #333;
   position: relative;
   width: $size;
   height: $size;
+  overflow: hidden;
 
-  svg { fill: $color; width: 100%; }
+  .man, .info { transition: opacity 0.3s, transform 0.3s; }
 
   .man {
     width: 8em;
-    height: 10em;
-    margin: 0 1em;
+    height: 8em;
+    margin: 1em;
 
     background: none no-repeat center;
 
@@ -46,7 +47,12 @@ $color: #333;
   }
 
   .info {
-    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transform: scale(0.2);
     text-align: center;
 
     .heart {
@@ -95,8 +101,8 @@ $color: #333;
   }
 
   &:hover {
-    .man { display: none; }
-    .info { display: block; }
+    .man { opacity: 0; transform: translate(-10em, 0); }
+    .info { opacity: 1; transform: scale(1); }
   }
 }
 
